Fix definition using wrong font

--- a/src/main/resources/com/marvinelsen/willow/stylesheets/definitions.css
+++ b/src/main/resources/com/marvinelsen/willow/stylesheets/definitions.css
@@ -1,5 +1,5 @@
 html {
-    font-family: "Noto Sans TC";
+    font-family: "Noto Sans CJK TC";
     border: 1px solid #B5B5B5;
 }
 
